--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <nav class="navRow">
             <ul>
                 <li id="navLogo">
-                    <svg class="icon icon-Logo-32-icon"><use xlink:href="#icon-Logo-32-icon"></use></svg>
+                    <svg class="icon icon-coin-dollar"><use xlink:href="#icon-coin-dollar"></use></svg>
                     <span>CryptoLists</span>
                 </li>
                 <a href="index.html" class="gaweg"><li>Home</li></a>
@@ -168,24 +168,10 @@
                 <path d="M19 6h5v-6h-5c-3.86 0-7 3.14-7 7v3h-4v6h4v16h6v-16h5l1-6h-6v-3c0-0.542 0.458-1 1-1z"></path>
                 </symbol>
                 <symbol id="icon-Logo-32-icon" viewBox="0 0 32 32">
-                <title>Logo-32-icon</title>
-                <path d="M24.1 9.6c0 0-0.1 0.1-0.1 0.2 0.8 0.5 1.5 1.1 2.3 1.6l0.3-0.2c0 0 0 0 0-0.1 0 0 0-0.1 0.1-0.1-0.3-0.5-0.2-1 0.2-1.3 0.2-0.1 0.3-0.2 0.5-0.2v-0.1c-0.8-0.5-1.6-0.8-2.4-1.3 0 0-0.1 0.2-0.1 0.2-0.4-0.3-0.9-0.2-1.2 0.3-0.3 0.2-0.1 0.7 0.4 1z"></path>
-                <path d="M26.9 11c0 0-0.2 0.1-0.1 0.1 0.6 0.8 1 1.6 1.6 2.4h0.1c-0.1-0.6 0.2-1 0.7-1.1 0.1 0 0.1 0 0.2 0 0.2 0 0.4 0.1 0.5 0.2l0.1-0.1v-0.5c-0.5-0.7-1.2-1.4-1.8-2.2 0 0-0.1 0.1-0.1 0.1-0.3-0.4-0.8-0.6-1.2-0.2-0.4 0.3-0.4 0.9 0 1.3z"></path>
-                <path d="M30 13.2c-0.1-0.5-0.5-0.9-1-0.7-0.5 0.1-0.7 0.6-0.5 1.1 0 0-0.2 0-0.2 0 0.2 1 0.3 2 0.5 2.9l0.2 0.1c0.2-0.4 0.5-0.6 0.8-0.6 0.1 0 0.2 0 0.3 0 0.2 0.1 0.3 0.2 0.4 0.3h0.1l0.3-0.3c-0.2-0.9-0.5-1.8-0.8-2.8 0.1-0.1-0.1 0-0.1 0z"></path>
-                <path d="M30.6 17.4c0.1-0.5 0-1-0.5-1.2-0.5-0.1-0.9 0.2-1 0.7 0 0-0.2-0.1-0.2-0.1-0.3 1-0.6 1.9-0.9 2.8l0.2 0.2c0 0 0.1 0 0.1 0.1 0.2-0.2 0.5-0.3 0.7-0.3s0.4 0.1 0.6 0.2 0.3 0.3 0.3 0.6l0.3-0.1c0.2-0.9 0.4-1.9 0.6-2.8 0-0.1-0.2-0.1-0.2-0.1z"></path>
-                <path d="M29.5 19.9c-0.4-0.4-0.9-0.2-1.2 0.2 0 0-0.1-0.2-0.1-0.1-0.6 0.8-1.3 1.4-1.9 2.1l0.1 0.4c0.1 0 0.1 0 0.2 0 0.4 0 0.6 0.2 0.8 0.5 0.1 0.2 0.1 0.4 0.1 0.5v0h0.4c0.6-0.7 1.1-1.5 1.7-2.3 0 0-0.1-0.1-0.1-0.1 0.4-0.3 0.4-0.9 0-1.2z"></path>
-                <path d="M26.2 22.7c0 0 0-0.2-0.1-0.2-0.9 0.4-1.7 0.7-2.5 1.1l-0.1 0.4c0.5 0.1 0.8 0.5 0.8 1 0 0.2-0.1 0.3-0.1 0.5l0.3 0.2c0.8-0.4 1.6-0.9 2.4-1.4 0 0-0.1-0.2-0.1-0.2 0.5-0.2 0.7-0.7 0.5-1.2-0.2-0.3-0.7-0.4-1.1-0.2z"></path>
-                <path d="M23.4 24.2c0 0 0.1-0.2 0-0.2-1-0.1-1.8-0.2-2.7-0.3l-0.1 0.1v0.1c0 0 0 0.1-0.1 0.2 0.1 0.2 0.2 0.4 0.2 0.6 0 0.3-0.1 0.5-0.3 0.7 0 0 0 0-0.1 0v0.2l0.2 0.4c0.9 0.1 1.8 0 2.7 0 0 0 0-0.2 0-0.2 0.5 0 0.9-0.2 0.9-0.8 0.2-0.4-0.2-0.8-0.7-0.8z"></path>
-                <path d="M20.4 24.1c0 0 0.1-0.1 0.1-0.1-0.1-0.7-0.1-1.3-0.2-1.7 0.1-0.5 0.2-0.9 0.2-1.4 0-1.3-1.2-4.6-2.4-7.5l1.2 2.8c0 0 1.1-0.8 1.2-1.2 0.2-2.1-4.7-7-4.7-7v0c0 0-4.9 4.9-4.7 7 0 0.4 1.2 1.2 1.2 1.2l1.2-2.8c-1.2 2.9-2.4 6.2-2.4 7.5 0 0.7 0.1 1.3 0.4 2 0 0.3-0.1 0.7-0.1 1.1 0 0 0.1 0.1 0.1 0.1-0.3 0.4-0.4 0.9 0 1.3 0.4 0.3 0.9 0.2 1.2-0.2 0 0 0.1 0.1 0.1 0.1 0.4 0 0.7 0 1.1 0 1.1 0.5 2.4 0.5 3.6 0 0.5 0.1 0.9 0.1 1.4 0.1 0 0 0.1-0.1 0.1-0.1 0.3 0.4 0.8 0.6 1.2 0.2 0.5-0.5 0.5-1 0.2-1.4zM15.7 23.2c-0.3 0-0.6-0.1-0.9-0.2v0c-0.6-0.2-1.1-0.7-1.3-1.4v0c-0.1-0.3-0.1-0.5-0.1-0.8 0-1.3 1-2.3 2.3-2.3s2.3 1 2.3 2.3-1 2.4-2.3 2.4v0z"></path>
-                <path d="M5.3 11c0.1 0 0.1 0 0.1 0.1 0 0 0 0 0 0.1l0.3 0.2c0.7-0.5 1.4-1 2.3-1.6 0 0-0.1-0.2-0.1-0.2 0.4-0.3 0.6-0.7 0.4-1.2s-0.7-0.6-1.1-0.3c0 0 0-0.2-0.1-0.2-0.8 0.5-1.7 0.9-2.4 1.4v0.1c0.2 0 0.4 0.1 0.5 0.2 0.3 0.3 0.4 0.9 0.1 1.4z"></path>
-                <path d="M2.2 12.6c0.2-0.1 0.3-0.2 0.5-0.2 0.1 0 0.2 0 0.2 0 0.5 0.1 0.7 0.6 0.7 1.1h0.1c0.5-0.7 1-1.6 1.6-2.4 0 0-0.1-0.1-0.1-0.1 0.3-0.4 0.3-1-0.1-1.3s-0.9-0.2-1.2 0.3c0 0-0.1-0.2-0.1-0.1-0.6 0.7-1.3 1.4-1.8 2.1l0.2 0.6z"></path>
-                <path d="M1.4 16.4c0.1-0.1 0.3-0.2 0.4-0.3 0.1 0 0.2 0 0.3 0 0.4 0 0.6 0.2 0.8 0.6l0.2-0.1c0.2-0.9 0.3-1.8 0.5-2.9 0 0-0.2 0-0.2 0 0.1-0.5-0.1-1-0.5-1.1-0.5-0.1-0.9 0.2-1 0.7 0 0-0.2-0.1-0.2 0-0.2 1-0.6 1.9-0.8 2.8l0.3 0.3h0.2z"></path>
-                <path d="M3 19.6c0.2 0 0.5 0.1 0.7 0.3 0.1-0.1 0.1-0.1 0.1-0.1l0.2-0.2c-0.2-0.9-0.6-1.8-0.9-2.8 0 0-0.2 0.1-0.2 0.1-0.1-0.5-0.5-0.9-1-0.7-0.5 0.1-0.6 0.7-0.5 1.2 0 0-0.2 0-0.2 0.1 0.3 1 0.4 1.9 0.6 2.8l0.3 0.1c0-0.2 0.1-0.4 0.3-0.6s0.4-0.2 0.6-0.2z"></path>
-                <path d="M5.3 22.4c0.1 0 0.1 0 0.2 0l0.1-0.4c-0.6-0.7-1.2-1.3-1.9-2.1 0 0-0.1 0.1-0.1 0.1-0.3-0.4-0.8-0.5-1.2-0.2-0.4 0.4-0.3 0.9 0 1.3 0 0-0.2 0.1-0.1 0.1 0.6 0.8 1.1 1.6 1.7 2.3h0.4c0-0.2 0-0.4 0.1-0.5 0.2-0.4 0.5-0.6 0.8-0.6z"></path>
-                <path d="M8.5 24.1l-0.1-0.4c-0.8-0.4-1.6-0.7-2.5-1.1 0 0-0.1 0.2-0.1 0.2-0.5-0.2-0.9-0.1-1.2 0.4-0.2 0.5 0 1 0.5 1.2 0 0-0.1 0.2-0.1 0.2 0.8 0.4 1.6 1 2.4 1.4l0.3-0.2c-0.1-0.1-0.1-0.3-0.1-0.5 0-0.7 0.3-1.1 0.9-1.2z"></path>
-                <path d="M11.6 25.4c-0.2-0.2-0.3-0.4-0.3-0.7 0-0.2 0.1-0.4 0.2-0.6-0.1-0.1-0.1-0.1-0.1-0.2v-0.1l-0.1-0.1c-0.9 0.1-1.7 0.2-2.7 0.3 0 0 0 0.2 0 0.2-0.5 0-0.9 0.4-0.9 0.9s0.5 0.8 0.9 0.8c0 0 0 0.2 0 0.2 0.9-0.1 1.8 0 2.7 0l0.2-0.4 0.1-0.3c0 0.1 0 0.1 0 0z"></path>
-                <path d="M15.7 19.6c-0.6 0-1.2 0.5-1.2 1.2 0 0.6 0.5 1.2 1.2 1.2 0-0.4 0.3-0.7 0.6-0.7 0.1 0 0.2 0 0.3 0.1 0.3-0.5 0.2-1.3-0.4-1.6 0-0.1-0.3-0.2-0.5-0.2v0z"></path>
-                </symbol>
+				<symbol id="icon-coin-dollar" viewBox="0 0 32 32">
+				<title>coin-dollar</title>
+				<path d="M15 2c-8.284 0-15 6.716-15 15s6.716 15 15 15c8.284 0 15-6.716 15-15s-6.716-15-15-15zM15 29c-6.627 0-12-5.373-12-12s5.373-12 12-12c6.627 0 12 5.373 12 12s-5.373 12-12 12zM16 16v-4h4v-2h-4v-2h-2v2h-4v8h4v4h-4v2h4v2h2v-2h4l-0-8h-4zM14 16h-2v-4h2v4zM18 22h-2v-4h2v4z"></path>
+				</symbol>
                 </defs>
                 </svg>
 <!-- Einde Icon codes --> 
